syntax = "proto3";

package proto;

message User {
    string email = 1;
    bytes hex_keys = 2; // Для UserGet - пустое
}

message Secret {
    string title = 1;
    enum SecretType {
        TEXT = 0;
        CRED = 1;
        DATA = 2;
        CARD = 3;
    }
    SecretType secret_type = 2;
    int64 user_id = 3;
    int64 created_at = 4;
    int64 version = 5;
    bytes payload = 6;
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    User user = 1;
}

message LoginRequest {
    User user = 1;
}

message LoginResponse {
    string token = 1;
}

message RegisterRequest {
    User user = 1;
}

message RegisterResponse {
    string token = 1;
}


service Storage {
    rpc UserGet(UserRequest) returns (UserResponse);
    rpc UserCreate(UserRequest) returns (UserResponse);
}

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}